# lab1

./: CMakeLists.txt  MainView.cpp  MainView.h  Matrix.cpp  Matrix.h  RectangleMatrix.cpp  RectangleMatrix.h  SingleMatrix.cpp  SingleMatrix.h  main.cpp
domain/: Matrix.cpp  Matrix.h  MatrixOperator.cpp  MatrixOperator.h
presentation/: MainPresenter.cpp  MainPresenter.h  MainView.cpp  MainView.h
